2001-03-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* tools/shp2pcx.cc: convert shp+pal to a .pcx for each frame
	* tools/Makefile.am: build shp2pcx

2001-03-09  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in, compiler/Makefile.am: added --disable-compiler switch

2001-03-08  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* menulist.cc: disable sound-related options in setup when no MIDI
	* Audio.cc: write config/audio/enabled setting to file when not present
	* pcb.h, Timidity_binary.cc: fixed part of broken timidity driver

2001-03-07  Jeff Freedman  <jeff@amy.nerble.net>

	* Audio:  Mixer now uses a fixed number of audio buffers, and
	avoids dynamic memory access during the mixing callback.

2001-03-07  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Audio.cc/h: added a config/audio/enabled switch to kill all audio.
	* */Makefile.am: added support for VPATH builds
	* conf/Makefile.am: don't build confregress with --disable-tools

2001-03-04  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (Lab_schedule): Implemented.

2001-03-03  Jeff Freedman  <jeff@amy.nerble.net>

	* Desk_schedule.
	* Animate wounded men at healers'.

2001-03-01  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (Sew_schedule): Finished it.

2001-02-27  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc: 'Street maintenance' - turn lights off/on,
	open/close shutters.

2001-02-26  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (Walk_to_schedule): Moved door detection to
	Path_walking_actor_action class.

2001-02-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in, acconfig.h: configure changes for OpenBSD support
	* utils.cc, gump_utils.cc: attempt at OpenBSD support. (thanks to Alex Botero-Lowry)
	* Midi.cc: disable forked_player in OpenBSD
	
2001-02-24  Jeff Freedman  <jeff@amy.nerble.net>

	* Npc_actor::handle_event always looks for schedule.
	* Vesper provisioner bug fixed.